--- a/training/web/index.xhtml
+++ b/training/web/index.xhtml
@@ -8,7 +8,7 @@
     <h:body>
         Hello from Facelets
         <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+        <h:link outcome="module.xhtml" value="module" />
     </h:body>
 </html>
 
