--- a/training/web/ModifMembre.xhtml
+++ b/training/web/ModifMembre.xhtml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8' ?>
+ç<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><h:commandButton action="#{saisie.enregistrerMembre()}" value="Enregistrer"/></td>
+                    <td><h:commandButton action="#{Saisie. modifierMembre()}" value="Enregistrer"/></td>
                 </tr>
             </table>
                         
