Ajout des données sur le Serveur du Groupe Rocky

--- a/training/web/ModifEvaluation.xhtml
+++ b/training/web/ModifEvaluation.xhtml
@@ -11,27 +11,27 @@
             <table>
                 <tr>
                     <td>ID Membre</td>
-                    <td><h:inputText value="#{Saisie.evaluation.idMembre}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>ID Module</td>
-                    <td><h:inputText value="#{Saisie.evaluation.idModule}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>ID Evaluateur</td>
-                    <td><h:inputText value="#{Saisie.evaluation.idEvaluateur}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Date</td>
-                    <td><h:inputText value="#{Saisie.evaluation.date}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Cote</td>
-                    <td><h:inputText value="#{Saisie.evaluation.cote}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><h:commandButton action="#{Saisie. modifierModifEvaluation()}" value="Modifier"/></td>
+                    <td><h:commandButton  value="Modifier"/></td>
                 </tr>
             </table>
         </h:form>
