--- a/training/web/ModifModule.xhtml
+++ b/training/web/ModifModule.xhtml
@@ -11,15 +11,15 @@
             <table>
                 <tr>
                     <td>ID</td>
-                    <td><h:inputText value="#{Saisie.module.idModule}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Designation</td>
-                    <td><h:inputText value="#{Saisie.module.designation}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><h:commandButton action="#{Saisie. modifierModifModule()}" value="Modifier"/></td>
+                    <td><h:commandButton value="Modifier"/></td>
                 </tr>
             </table>
         </h:form>
