--- a/training/web/ModifPaiement.xhtml
+++ b/training/web/ModifPaiement.xhtml
@@ -11,31 +11,31 @@
             <table>
                 <tr>
                     <td>ID Membre</td>
-                    <td><h:inputText value="#{Saisie.paiement.idMembre}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>ID Mobile</td>
-                    <td><h:inputText value="#{Saisie.paiement.idMobile}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Date</td>
-                    <td><h:inputText value="#{Saisie.paiement.dateP}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Montant</td>
-                    <td><h:inputText value="#{Saisie.paiement.montant}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Monnaie</td>
-                    <td><h:inputText value="#{Saisie.paiement.monnaie}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td>Taux</td>
-                    <td><h:inputText value="#{Saisie.paiement.taux}"/></td>
+                    <td><h:inputText value=""/></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><h:commandButton action="#{Saisie. modifierModifPaiement()}" value="Modifier"/></td>
+                    <td><h:commandButton  value="Modifier"/></td>
                 </tr>
             </table>
         </h:form>
