--- a/training/web/module.xhtml
+++ b/training/web/module.xhtml
@@ -8,24 +8,24 @@
     </h:head>
     <h:body>
         <h:form>
-            <span style="color: red">#{saisie.message}</span><br/>
+            <span style="color: red">#{module.message}</span><br/>
             <table>
                 <tr>
                     <td>ID</td>
-                    <td><h:inputText value="#{saisie.module.idModule}"/></td>
+                    <td><h:inputText value="#{module.idModule}"/></td>
                 </tr>
                 <tr>
                     <td>Designation</td>
-                    <td><h:inputText value="#{saisie.module.designation}"/></td>
+                    <td><h:inputText value="#{module.designation}"/></td>
                 </tr>
                 
                 <tr>
                     <td>Nombre de Page</td>
-                    <td><h:inputText value="#{saisie.module.nbrePage}"/></td>
+                    <td><h:inputText value="#{module.nbrePage}"/></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td><h:commandButton action="#{saisie.EnregistrerModule()}" value="Enregistrer"/></td>
+                    <td><h:commandButton action="#{module.retour()}" value="Retour"/></td>
+                    <td><h:commandButton action="#{module.enregistrer()}" value="Enregistrer"/></td>
                 </tr>
             </table>
         </h:form>
