--- a/training/web/selectFormateur.xhtml
+++ b/training/web/selectFormateur.xhtml
@@ -10,8 +10,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>
-            
+        <h:form>           
             <p:dataTable var="formateurs" value="#{membre.listeFormateur()}">
                 <p:column headerText="ID">
                     <h:outputText value="#{formateurs.idMembre}"/>
@@ -42,6 +41,10 @@
                     <h:outputText value="Supprimer"/>
                 </p:column>
             </p:dataTable>
+            <br/>
+            <h:commandButton action="#{formateur.selectMembre()}" value="Nouveau" rendered="#{formateur.action eq 'Formateurs'}">
+                <f:setPropertyActionListener target="#{formateur.action}" value="Formateurs"/>
+            </h:commandButton>
         </h:form>
        
     </h:body>
