Ajout image du processus d'enregistement de l'universite

--- a/training/web/saisieFormation.xhtml
+++ b/training/web/saisieFormation.xhtml
@@ -15,7 +15,7 @@
             <table>
                 <tr>
                     <td><h:outputText value="Id Formation"/></td>
-                    <td><h:inputText value="#{formation.idformation}"/></td>
+                    <td><h:inputText value="#{formation.idFormation}"/></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Formateur"/></td>
