Processus d'enregistrement de l'université

--- a/training/web/saisieUniversite.xhtml
+++ b/training/web/saisieUniversite.xhtml
@@ -18,15 +18,15 @@
                 </tr>
                 <tr>
                     <td><h:outputText value="Directeur Général"/></td>
-                    <td><h:inputText value="#{universite.dg}"/></td>
+                    <td><h:outputText value="#{universite.dirGen.nom} #{universite.dirGen.postNom} #{universite.dirGen.prenom}"/></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Secrétaire académique"/></td>
-                    <td><h:inputText value="#{universite.academique}"/></td>
+                    <td><h:outputText value="#{universite.academ.nom} #{universite.academ.postNom} #{universite.academ.prenom}"/></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Administrateur du budget"/></td>
-                    <td><h:inputText value="#{universite.ab}"/></td>
+                    <td><h:outputText value="#{universite.adminBugd.nom} #{universite.adminBugd.postNom} #{universite.adminBugd.prenom}"/></td>
                 </tr>
                 <tr>
                     <td><h:outputText value="Nom"/></td>
