Processus attribution module au formateur

--- a/training/web/selectFormateur.xhtml
+++ b/training/web/selectFormateur.xhtml
@@ -10,7 +10,8 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:form>           
+        <h:form>        
+            
             <p:dataTable var="formateurs" value="#{membre.listeFormateur()}">
                 <p:column headerText="ID">
                     <h:outputText value="#{formateurs.idMembre}"/>
@@ -28,8 +29,12 @@
                     <h:commandButton action="#{formation.selectUniversite()}" value="Selectionner" rendered="#{formation.action eq 'Formation'}">
                         <f:setPropertyActionListener target="#{formation.membre}" value="#{formateurs}"/>                        
                     </h:commandButton>
-                    <h:commandButton action="#{formateur.selectModule()}" value="Selectionner" rendered="#{formateur.action eq 'Formateurs'}">
-                        <f:setPropertyActionListener target="#{formateur.membre}" value="#{formateurs}"/>                        
+                    <h:commandButton action="#{formateur.selectModule()}" value="Selectionner" rendered="#{membre.action eq 'Formateurs'}">
+                        <f:setPropertyActionListener target="#{formateur.idMembre}" value="#{formateurs.idMembre}"/> 
+                        <f:setPropertyActionListener target="#{formateur.nom}" value="#{formateurs.nom}"/>
+                        <f:setPropertyActionListener target="#{formateur.postNom}" value="#{formateurs.postNom}"/>
+                        <f:setPropertyActionListener target="#{formateur.prenom}" value="#{formateurs.prenom}"/>
+                        <f:setPropertyActionListener target="#{formateur.sexe}" value="#{formateurs.sexe}"/>
                     </h:commandButton>
                 </p:column>
                 <p:column headerText="Modification" rendered="#{membre.action eq 'maj'}">
