Resolution probleme sur le processus de formateur

--- a/training/web/saisieAttribution.xhtml
+++ b/training/web/saisieAttribution.xhtml
@@ -14,7 +14,7 @@
             <table>
                 <tr>
                     <td> <h:outputText value="Formateur :" /> </td>
-                    <td><h:outputText value="#{formateur.membre.nom} #{formateur.membre.postNom} #{formateur.membre.prenom}"/> </td>
+                    <td><h:outputText value="#{formateur.nom} #{formateur.postNom} #{formateur.prenom}"/> </td>
                 </tr>
                 <tr>
                     <td> <h:outputText value="Module :" /> </td>
