--- a/training/web/selectFormation.xhtml
+++ b/training/web/selectFormation.xhtml
@@ -12,33 +12,34 @@
     <h:body>
         <h:form>
             <h:outputText value="#{formation.action}"/>
-            <p:dataTable var="formation" value="#{formation.listeFormation()}">
+            <p:dataTable var="formations" value="#{formation.listeFormation()}">
                 <p:column headerText="ID">
-                    <h:outputText value="#{formation.idFormation}"/>
+                    <h:outputText value="#{formations.idFormation}"/>
                 </p:column>
                 <p:column headerText="Module">
-                    <h:outputText value="#{formation.idModule}"/>
+                    <h:outputText value="#{formations.idModule}"/>
                 </p:column>
                 <p:column headerText="Formateur">
-                    <h:outputText value="#{formation.idFormateur}"/>
+                    <h:outputText value="#{formations.idFormateur}"/>
                 </p:column>
                 <p:column headerText="Date début">
-                    <h:outputText value="#{formation.dateDebut}"/>
+                    <h:outputText value="#{formations.dateDebut}"/>
                 </p:column>
                 <p:column headerText="Date fin">
-                    <h:outputText value="#{formation.dateFin}"/>
+                    <h:outputText value="#{formations.dateFin}"/>
                 </p:column>
                 <p:column headerText="Heure début">
-                    <h:outputText value="#{formation.heuredeb}"/>
+                    <h:outputText value="#{formations.heuredeb}"/>
                 </p:column>
                 <p:column headerText="Heure fin">
-                    <h:outputText value="#{formation.heuref}"/>
+                    <h:outputText value="#{formations.heuref}"/>
                 </p:column>
                 
                 <p:column headerText="Action">
-                    <h:commandButton action="#{inscription.saisie()}" value="Selectionner" rendered="#{formation.action eq 'AffectationFormation'}">
-                        <f:setPropertyActionListener target="#{formation.formateur}" value="#{membre}"/>                        
-                    </h:commandButton>                 
+                   
+                    <h:commandButton action="#{formation.enregistrerAffectation_Formation()}" value="Selectionner" rendered="#{formation.action eq 'AffectationFormation'}">
+                        <f:setPropertyActionListener target="#{formation.idFormation}" value="#{formations.idFormation}"/>                         
+                    </h:commandButton>              
                 </p:column>
                 <p:column headerText="Modification" rendered="#{membre.action eq 'maj'}">
                     <p:link value="Modifier" outcome="ModifMembre.xhtml">
