--- a/training/web/module.xhtml
+++ b/training/web/module.xhtml
@@ -26,9 +26,9 @@
                 <tr>
                     <td><h:commandButton action="#{module.retour()}" value="Retour"/></td>
                     <td>
-                        <h:commandButton action="#{module.enregistrer()}" value="Enregistrer" rendered="#{module.action eq 'saisie'}"/>
-                        <h:commandButton action="#{module.modifier()}" value="Modifier" rendered="#{module.action eq 'modification'}"/>
-                        <h:commandButton action="#{module.supprimer()}" value="Supprimer" rendered="#{module.action eq 'suppression'}"/>
+                        <h:commandButton action="#{module.enregistrer()}" value="Enregistrer" rendered="#{actionMessage.action eq 'saisie'}"/>
+                        <h:commandButton action="#{module.modifier()}" value="Modifier" rendered="#{actionMessage.action eq 'modification'}"/>
+                        <h:commandButton action="#{module.supprimer()}" value="Supprimer" rendered="#{actionMessage.action eq 'suppression'}"/>
                     </td>
                 </tr>
             </table>
