--- a/training/web/selectFormateur.xhtml
+++ b/training/web/selectFormateur.xhtml
@@ -28,10 +28,10 @@
                     <h:outputText value="#{formateurs.prenom}"/>
                 </p:column>
                 <p:column headerText="Action">
-                    <h:commandButton action="#{formation.selectUniversite()}" value="Selectionner" rendered="#{formation.action eq 'Formation'}">
+                    <h:commandButton action="#{formation.selectUniversite()}" value="Selectionner" rendered="#{actionMessage.action eq 'Formation'}">
                         <f:setPropertyActionListener target="#{formation.membre}" value="#{formateurs}"/>                        
                     </h:commandButton>                    
-                    <h:commandButton action="#{formateur.selectModule()}" value="Selectionner" rendered="#{formateur.action eq 'Formateurs'}">
+                    <h:commandButton action="#{formateur.selectModule()}" value="Selectionner" rendered="#{actionMessage.action eq 'Formateurs'}">
                         <f:setPropertyActionListener target="#{formateur.idMembre}" value="#{formateurs.idMembre}"/> 
                         <f:setPropertyActionListener target="#{formateur.nom}" value="#{formateurs.nom}"/>
                         <f:setPropertyActionListener target="#{formateur.postNom}" value="#{formateurs.postNom}"/>
@@ -49,7 +49,7 @@
                 </p:column>
             </p:dataTable>
             <br/>
-            <h:commandButton action="#{formateur.selectMembre()}" value="Nouveau" rendered="#{formateur.action eq 'Formateurs'}">
+            <h:commandButton action="#{formateur.selectMembre()}" value="Nouveau" rendered="#{actionMessage.action eq 'Formateurs'}">
                 <f:setPropertyActionListener target="#{formateur.action}" value="Formateurs"/>
             </h:commandButton>
         </h:form>
