--- a/training/web/selectMembre.xhtml
+++ b/training/web/selectMembre.xhtml
@@ -26,27 +26,31 @@
                     <h:outputText value="#{membre.prenom}"/>
                 </p:column>
                 <p:column headerText="Action">
-                    <h:commandButton action="#{inscription.saisie()}" value="Selectionner" rendered="#{inscription.action eq 'Inscription'}">
+                    <h:commandButton action="#{inscription.saisie()}" value="Selectionner" rendered="#{actionMessage.action eq 'Inscription'}">
                         <f:setPropertyActionListener target="#{inscription.membre}" value="#{membre}"/>                        
                     </h:commandButton>
-                    <h:commandButton action="#{inscription.saisie()}" value="Selectionner" rendered="#{evaluation.action eq 'Evaluation'}">
+                    <h:commandButton action="#{inscription.saisie()}" value="Selectionner" rendered="#{actionMessage.action eq 'Evaluation'}">
                         <f:setPropertyActionListener target="" value=""/>                        
                     </h:commandButton>
-                    <h:commandButton action="#{formateur.saisieFormateur()}" value="Selectionner" rendered="#{formateur.action eq 'Formateurs'}">
-                        <f:setPropertyActionListener target="#{formateur.membre}" value="#{membre}"/>                        
+                    <h:commandButton action="#{formateur.enregistrerFormateur()}" value="Selectionner" rendered="#{actionMessage.action eq 'Formateurs'}">
+                        <f:setPropertyActionListener target="#{formateur.idMembre}" value="#{membre.idMembre}"/> 
+                        <f:setPropertyActionListener target="#{formateur.nom}" value="#{membre.nom}"/> 
+                        <f:setPropertyActionListener target="#{formateur.postNom}" value="#{membre.postNom}"/> 
+                        <f:setPropertyActionListener target="#{formateur.prenom}" value="#{membre.prenom}"/>
+                        <f:setPropertyActionListener target="#{formateur.sexe}" value="#{membre.sexe}"/>
                     </h:commandButton>                 
-                    <h:commandButton action="#{universite.selectAcademique()}" value="Selectionner D.G" rendered="#{universite.action eq 'UniversiteDG'}">
+                    <h:commandButton action="#{universite.selectAcademique()}" value="Selectionner D.G" rendered="#{actionMessage.action eq 'UniversiteDG'}">
                         <f:setPropertyActionListener target="#{universite.dirGen}" value="#{membre}"/>
-                        <f:setPropertyActionListener target="#{universite.action}" value="UniversiteAC"/>
+                        <f:setPropertyActionListener target="#{actionMessage.action}" value="UniversiteAC"/>
                     </h:commandButton>
-                    <h:commandButton action="#{universite.selectAb()}" value="Selectionner Académique" rendered="#{universite.action eq 'UniversiteAC'}">
+                    <h:commandButton action="#{universite.selectAb()}" value="Selectionner Académique" rendered="#{actionMessage.action eq 'UniversiteAC'}">
                         <f:setPropertyActionListener target="#{universite.academ}" value="#{membre}"/> 
-                        <f:setPropertyActionListener target="#{universite.action}" value="UniversiteAB"/>
+                        <f:setPropertyActionListener target="#{actionMessage.action}" value="UniversiteAB"/>
                     </h:commandButton>
-                    <h:commandButton action="#{universite.saisie()}" value="Selectionner A.B" rendered="#{universite.action eq 'UniversiteAB'}">
+                    <h:commandButton action="#{universite.saisie()}" value="Selectionner A.B" rendered="#{actionMessage.action eq 'UniversiteAB'}">
                         <f:setPropertyActionListener target="#{universite.adminBugd}" value="#{membre}"/>                         
                     </h:commandButton>
-                    <h:commandButton action="#{formation.selectFormation()}" value="Selectionner" rendered="#{formation.action eq 'AffectationFormation'}">
+                    <h:commandButton action="#{formation.selectFormation()}" value="Selectionner" rendered="#{actionMessage.action eq 'AffectationFormation'}">
                         <f:setPropertyActionListener target="#{formation.membre}" value="#{membre}"/>                         
                     </h:commandButton>
                 </p:column>
